[package]
name = "halide-runtime"
version = "0.3.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/zshipko/halide-runtime"
documentation = "https://docs.rs/halide-runtime"
readme = "README.md"
description = "Bindings to the Halide runtime"

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
