[package]
name = "halide-runtime"
version = "0.6.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://github.com/zshipko/halide-runtime"
documentation = "https://docs.rs/halide-runtime"
readme = "README.md"
description = "Bindings to the Halide runtime"

[dependencies]

[build-dependencies]
bindgen = "0.60"
halide-build = "0.5"

[features]
default = ["gpu"]
gpu = []
